--- a/app/src/main/res/layout/post_image.xml
+++ b/app/src/main/res/layout/post_image.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<com.facebook.drawee.view.SimpleDraweeView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    android:scaleType="fitCenter"
-    android:src="@drawable/post_placeholder"
+    fresco:viewAspectRatio="1.33"
+    fresco:placeholderImage="@drawable/post_placeholder"
+    fresco:placeholderImageScaleType="fitCenter"
     android:contentDescription="@string/post_image">
-</ImageView>
+</com.facebook.drawee.view.SimpleDraweeView>
