--- a/app/src/main/res/layout/post_info.xml
+++ b/app/src/main/res/layout/post_info.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +22,7 @@
             android:paddingBottom="@dimen/post_action_drawable_top_icon_padding"
             android:drawableTop="@drawable/ic_visibility_black_18dp"
             android:drawablePadding="@dimen/post_action_drawable_top_icon_padding"
-            android:text="1000"/>
+            android:text="1000" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,7 +37,7 @@
                 android:layout_height="@dimen/post_action_icon_size"
                 android:src="@drawable/ic_favorite_black_18dp"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/like"/>
+                android:contentDescription="@string/like" />
 
             <TextView
                 android:id="@+id/post_like_count"
@@ -61,7 +63,7 @@
                 android:layout_height="@dimen/post_action_icon_size"
                 android:src="@drawable/ic_comment_black_18dp"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/comment"/>
+                android:contentDescription="@string/comment" />
 
             <TextView
                 android:id="@+id/post_comment_count"
@@ -84,28 +86,33 @@
             android:paddingBottom="@dimen/post_action_drawable_top_icon_padding"
             android:drawableTop="@drawable/ic_share_black_18dp"
             android:drawablePadding="@dimen/post_action_drawable_top_icon_padding"
-            android:text="Share"/>
+            android:text="Share" />
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/spacing_large">
-        
-        <ImageView
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/post_author_photo"
             android:layout_width="@dimen/post_author_photo_size"
             android:layout_height="@dimen/post_author_photo_size"
             android:layout_marginRight="@dimen/spacing_medium"
-            android:src="@drawable/user_photo_placeholder"
-            android:contentDescription="@string/post_author_photo"/>
+            android:clickable="true"
+            fresco:placeholderImage="@drawable/user_photo_placeholder"
+            fresco:placeholderImageScaleType="centerCrop"
+            fresco:roundAsCircle="true"
+            android:contentDescription="@string/post_author_photo"
+            android:background="?attr/selectableItemBackground"/>
+
         <TextView
             android:id="@+id/post_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/AppTheme.TextView.2"
-            android:text="Post author"/>
+            android:text="Post author" />
     </LinearLayout>
 
     <TextView
@@ -113,6 +120,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_medium"
-        tools:text="Post description\nPost description\nPost description\nPost description"/>
-
+        tools:text="Post description\nPost description\nPost description\nPost description" />
 </LinearLayout>
