--- a/app/src/main/res/layout/profile_info.xml
+++ b/app/src/main/res/layout/profile_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -14,9 +15,10 @@
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/profile_photo"
-            android:layout_width="@dimen/post_author_photo_size"
-            android:layout_height="@dimen/post_author_photo_size"
+            android:layout_width="@dimen/nav_photo_size"
+            android:layout_height="@dimen/nav_photo_size"
             android:layout_centerHorizontal="true"
+            android:contentDescription="@string/post_author_photo"
             fresco:placeholderImage="@drawable/user_photo_placeholder"
             fresco:placeholderImageScaleType="centerCrop"
             fresco:roundAsCircle="true" />
@@ -57,7 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/spacing_small"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:layout_marginLeft="@dimen/spacing_large"
         android:layout_marginRight="@dimen/spacing_large"
         android:layout_marginBottom="@dimen/spacing_large"
