--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="nav_header_height">180dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -15,12 +15,12 @@
     <dimen name="spacing_medium_small">12dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
     <dimen name="spacing_large">24dp</dimen>
+    <dimen name="spacing_xlarge">48dp</dimen>
 
     <dimen name="post_action_drawable_top_icon_padding">7dp</dimen>
     <dimen name="post_author_photo_size">48dp</dimen>
     <dimen name="post_author_photo_radius">24dp</dimen>
     <dimen name="post_action_icon_size">32dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
-    <dimen name="nav_bottom_padding">120dp</dimen>
     <dimen name="nav_photo_size">56dp</dimen>
 </resources>
