--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="nav_photo_size">56dp</dimen>
     <dimen name="launcher_size">72dp</dimen>
     <dimen name="activity_auth_progress_bar_height">2dp</dimen>
+    <dimen name="loading_item_height">36dp</dimen>
+    <dimen name="loading_progress_bar_size">24dp</dimen>
 </resources>
