--- a/app/src/main/res/layout/post_image.xml
+++ b/app/src/main/res/layout/post_image.xml
@@ -2,6 +2,7 @@
 <com.facebook.drawee.view.SimpleDraweeView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/post_full_image"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     fresco:viewAspectRatio="1.33"
