--- a/app/src/main/res/layout/post_info.xml
+++ b/app/src/main/res/layout/post_info.xml
@@ -12,18 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/post_view_count"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingTop="@dimen/post_action_drawable_top_icon_padding"
-            android:paddingBottom="@dimen/post_action_drawable_top_icon_padding"
-            android:drawableTop="@drawable/ic_visibility_black_18dp"
-            android:drawablePadding="@dimen/post_action_drawable_top_icon_padding"
-            android:text="1000" />
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -76,6 +64,32 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageButton
+                android:id="@+id/post_action_category"
+                android:layout_width="@dimen/post_action_icon_size"
+                android:layout_height="@dimen/post_action_icon_size"
+                android:src="@drawable/ic_inbox_black_18dp"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/category" />
+
+            <TextView
+                android:id="@+id/post_category_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@android:color/holo_blue_dark"
+                android:clickable="true"
+                tools:text="1000" />
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/post_action_share"
             android:layout_width="0dp"
@@ -89,10 +103,9 @@
             android:text="Share" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="@dimen/spacing_large">
 
         <com.facebook.drawee.view.SimpleDraweeView
@@ -111,9 +124,18 @@
             android:id="@+id/post_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/AppTheme.TextView.2"
-            android:text="Post author" />
-    </LinearLayout>
+            android:layout_toRightOf="@+id/post_author_photo"
+            android:layout_alignTop="@+id/post_author_photo"
+            style="@style/AppTheme.TextView.2"/>
+
+        <TextView
+            android:id="@+id/post_author_bio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/post_author_photo"
+            android:layout_below="@+id/post_author_name"
+            style="@style/AppTheme.TextView.2"/>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/post_description"
