--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,6 @@
     <dimen name="activity_auth_progress_bar_height">2dp</dimen>
     <dimen name="loading_item_height">36dp</dimen>
     <dimen name="loading_progress_bar_size">24dp</dimen>
+    <dimen name="spacing_xxlarge">64dp</dimen>
+    <dimen name="comment_photo_size">48dp</dimen>
 </resources>
